# Homeworks

./: README.md  main.py  pyproject.toml
src/: mask.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
